--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,9 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   cached_network_image: ^2.2.0+1
+  camera: ^0.8.1
+  permission_handler: ^6.1.1
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
