--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,6 +31,10 @@ dependencies:
   cached_network_image: ^2.2.0+1
   camera: ^0.8.1
   permission_handler: ^6.1.1
+  app_settings: ^4.1.0
+  provider: ^5.0.0
+  path: ^1.8.0
+  path_provider: ^2.0.1
 
 dev_dependencies:
   flutter_test:
