--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,7 @@ dependencies:
   provider: ^5.0.0
   path: ^1.8.0
   path_provider: ^2.0.1
+  local_image_provider: ^2.1.0
 
 dev_dependencies:
   flutter_test:
