--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -27,14 +27,14 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+  cupertino_icons: ^0.1.3
   cached_network_image: ^2.2.0+1
-  camera: ^0.8.1
-  permission_handler: ^6.1.1
-  app_settings: ^4.1.0
-  provider: ^5.0.0
-  path: ^1.8.0
-  path_provider: ^2.0.1
+  camera: ^0.7.0
+  permission_handler: ^5.0.1+1
+  app_settings: ^4.0.1+1
+  provider: ^4.3.1
+  path: ^1.6.4
+  path_provider: ^1.6.11
   local_image_provider: ^2.1.0
 
 dev_dependencies:
