--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,6 +38,7 @@ dependencies:
   local_image_provider: ^2.1.0
   firebase_auth: ^1.0.3
   firebase_core: ^1.0.3
+  flutter_facebook_login: ^3.0.0
 
 
 dev_dependencies:
